--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -12,17 +12,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/room_list_layout"
+            android:scaleType="fitXY"
+            android:src="@drawable/secure_header_solid"
+            android:tint="#cc302e2f"/>
+
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:theme="@style/ThemeOverlay.AppCompat.Light">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@android:color/transparent"
             android:titleTextColor="@color/white"
             android:subtitleTextColor="@color/white"
             app:layout_scrollFlags="scroll|enterAlways"
@@ -36,29 +45,40 @@
         <RelativeLayout
             android:id="@+id/connected_state_layout"
             android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:layout_below="@+id/appbar"
-            android:background="@color/room_item">
+            android:layout_height="wrap_content"
+            android:paddingTop="?attr/actionBarSize">
+
             <TextView
                 android:id="@+id/connected_state"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:lines="1"
                 android:maxLines="1"
-                android:layout_centerVertical="true"
-                android:textColor="@android:color/holo_red_dark"
+                android:gravity="center"
+                android:textColor="#00afce"
+                android:textSize="20sp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/disconnected"/>
 
-            <ProgressBar
+            <com.github.ybq.android.spinkit.SpinKitView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/connecting_progress"
+                style="@style/SpinKitView.Large.ThreeBounce"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/connected_state"
+                android:layout_gravity="center"
+                app:SpinKit_Color="@color/white" />
+
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:layout_alignTop="@+id/connected_state"
-                android:layout_alignBottom="@+id/connected_state"
-                android:layout_toRightOf="@+id/connected_state"/>
+                android:id="@+id/connected_image"
+                android:layout_below="@+id/connected_state"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/ic_lock_white_48dp"
+                android:visibility="invisible"/>
         </RelativeLayout>
 
         <RelativeLayout
