--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -5,16 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.appspot.apprtc.UserActivity"
     android:background="@color/white">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/videocall_layout"
+        android:scaleType="fitXY"
+        android:src="@drawable/secure_header_solid"
+        android:tintMode="src_over"
+        android:tint="#cc302e2f"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#333"
         android:id="@+id/user_header">
 
         <ImageView
@@ -22,7 +27,7 @@
             android:layout_height="96dp"
             android:id="@+id/image_id"
             android:layout_margin="10dp"
-            android:layout_alignParentLeft="true"
+            android:layout_centerHorizontal="true"
             android:src="@drawable/user_icon_round"/>
 
         <TextView
@@ -34,6 +39,7 @@
             android:layout_below="@+id/image_id"
             android:textSize="20sp"
             android:textColor="@color/white"
+            android:layout_centerHorizontal="true"
             android:id="@+id/text_id"/>
 
         <TextView
@@ -45,7 +51,9 @@
             android:layout_below="@+id/text_id"
             android:textSize="15sp"
             android:textColor="@color/white"
+            android:layout_centerHorizontal="true"
             android:id="@+id/message"/>
+
 </RelativeLayout>
 
     <RelativeLayout
