--- a/app/src/main/res/layout/fragment_roomlist.xml
+++ b/app/src/main/res/layout/fragment_roomlist.xml
@@ -11,13 +11,14 @@
         android:id="@+id/room_controls_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primary"
+        android:background="#302e2f"
         android:layout_marginBottom="2dp">
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:id="@+id/rooms_back_layout">
+            android:id="@+id/rooms_back_layout"
+            style="@style/Widget.AppCompat.Button.Colored">
 
             <ImageView
                 android:id="@+id/back_arrow"
@@ -33,8 +34,7 @@
                 android:text="@string/rooms_button"
                 android:gravity="left|center_vertical"
                 android:layout_toRightOf="@+id/back_arrow"
-                android:textColor="@color/white"
-                android:background="@color/primary"/>
+                android:textColor="@color/white"/>
 
         </RelativeLayout>
 
