--- a/app/src/main/res/layout/room_drawer_header.xml
+++ b/app/src/main/res/layout/room_drawer_header.xml
@@ -19,11 +19,18 @@
   You should have received a copy of the GNU Affero General Public
   License along with this program. If not, see <http://www.gnu.org/licenses/>.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_drawer_header_height"
-    android:background="#333"
     android:fitsSystemWindows="true">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/room_list_layout"
+        android:scaleType="fitXY"
+        android:src="@drawable/secure_header_solid"
+        android:tint="#cc302e2f"/>
 
     <RelativeLayout
         android:id="@+id/drawer_active_user"
@@ -124,4 +131,4 @@
 
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
