--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
     <item name="android:windowFullscreen">true</item>
     <item name="colorPrimary">@color/primary</item>
     <item name="colorPrimaryDark">@color/primary_dark</item>
-    <item name="colorAccent">@color/accent</item>
+    <item name="colorAccent">#00afce</item>
   </style>
 
   <!-- ToolBar -->
@@ -24,9 +24,9 @@
     <item name="android:textColorPrimary">@android:color/white</item>
     <item name="android:textColorSecondary">@android:color/white</item>
     <item name="actionMenuTextColor">@android:color/white</item>
-    <item name="colorPrimary">@color/primary</item>
-    <item name="colorPrimaryDark">@color/primary_dark</item>
-    <item name="colorAccent">@color/accent</item>
+    <item name="colorPrimary">@android:color/transparent</item>
+    <item name="colorPrimaryDark">@android:color/transparent</item>
+    <item name="colorAccent">@android:color/transparent</item>
   </style>
 
   <style name="MenuLabelsStyle">
