--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -14,32 +14,18 @@
         android:layout_height="48dp"
         android:background="#302e2f"
         android:layout_marginBottom="2dp">
-        <RelativeLayout
+
+        <TextView
+            android:id="@+id/recentButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:id="@+id/recent_back_layout"
-            style="@style/Widget.AppCompat.Button.Colored">
+            android:text="@string/recent_button"
+            android:gravity="left|center_vertical"
+            android:textSize="16sp"
+            android:drawableLeft="@drawable/ic_arrow_back_white_24dp"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:textColor="@color/white"/>
 
-            <ImageView
-                android:id="@+id/back_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_arrow_back_white_24dp"/>
-            <TextView
-                android:id="@+id/recentButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/recent_button"
-                android:gravity="left|center_vertical"
-                android:layout_alignTop="@+id/back_arrow"
-                android:layout_alignBottom="@+id/back_arrow"
-                android:textSize="16sp"
-                android:layout_toRightOf="@+id/back_arrow"
-                android:textColor="@color/white"/>
-        
-        </RelativeLayout>
         
         <TextView
             android:id="@+id/userName"
@@ -48,8 +34,8 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:textSize="16sp"
-            android:layout_alignTop="@+id/recent_back_layout"
-            android:layout_alignBottom="@+id/recent_back_layout"
+            android:layout_alignTop="@+id/recentButton"
+            android:layout_alignBottom="@+id/recentButton"
             android:textColor="@color/white"
             android:text="User Name"/>
 
@@ -62,8 +48,8 @@
             android:layout_marginRight="5dp"
             android:textSize="16sp"
             android:textAllCaps="false"
-            android:layout_alignTop="@+id/recent_back_layout"
-            android:layout_alignBottom="@+id/recent_back_layout"
+            android:layout_alignTop="@+id/recentButton"
+            android:layout_alignBottom="@+id/recentButton"
             android:textColor="@color/white"
             style="@style/Widget.AppCompat.Button.Colored"/>
 
