--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -13,13 +13,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <include
+        layout="@layout/spreedbox_header"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/viewpager"
-        android:scaleType="fitXY"
-        android:src="@drawable/secure_header_solid"
-        android:tint="#cc302e2f"/>
+        android:layout_above="@+id/viewpager"/>
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
