--- a/app/src/main/res/layout/fragment_roomlist.xml
+++ b/app/src/main/res/layout/fragment_roomlist.xml
@@ -14,29 +14,16 @@
         android:background="#302e2f"
         android:layout_marginBottom="2dp">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/roomsButton"
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:id="@+id/rooms_back_layout"
-            style="@style/Widget.AppCompat.Button.Colored">
+            android:layout_height="wrap_content"
+            android:text="@string/rooms_button"
+            android:gravity="left|center_vertical"
+            android:drawableLeft="@drawable/ic_arrow_back_white_24dp"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:textColor="@color/white"/>
 
-            <ImageView
-                android:id="@+id/back_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/roomsButton"
-                android:layout_alignBottom="@+id/roomsButton"
-                android:src="@drawable/ic_arrow_back_white_24dp"/>
-            <TextView
-                android:id="@+id/roomsButton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/rooms_button"
-                android:gravity="left|center_vertical"
-                android:layout_toRightOf="@+id/back_arrow"
-                android:textColor="@color/white"/>
-
-        </RelativeLayout>
 
         <TextView
             android:id="@+id/roomName"
@@ -45,8 +32,8 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:textSize="16sp"
-            android:layout_alignTop="@+id/rooms_back_layout"
-            android:layout_alignBottom="@+id/rooms_back_layout"
+            android:layout_alignTop="@+id/roomsButton"
+            android:layout_alignBottom="@+id/roomsButton"
             android:textColor="@color/white"
             android:text="Room Name"/>
 
