--- a/app/src/main/res/layout/room_drawer_header.xml
+++ b/app/src/main/res/layout/room_drawer_header.xml
@@ -24,13 +24,8 @@
     android:layout_height="@dimen/nav_drawer_header_height"
     android:fitsSystemWindows="true">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/room_list_layout"
-        android:scaleType="fitXY"
-        android:src="@drawable/secure_header_solid"
-        android:tint="#cc302e2f"/>
+    <include
+        layout="@layout/spreedbox_header"/>
 
     <RelativeLayout
         android:id="@+id/drawer_active_user"
