--- a/app/src/main/res/layout/rooms_list.xml
+++ b/app/src/main/res/layout/rooms_list.xml
@@ -1,4 +1,5 @@
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -8,7 +9,8 @@
         android:id="@+id/image_id"
         android:layout_margin="5dp"
         android:layout_alignParentLeft="true"
-        android:src="@drawable/group_icon"/>
+        android:tint="#888"
+        android:src="@drawable/ic_supervisor_account_white_48dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,10 +38,11 @@
         android:id="@+id/joined_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/right_arrow"
         android:layout_centerVertical="true"
         android:layout_margin="5dp"
-        android:src="@drawable/ic_check_circle_black_24dp"/>
+        android:layout_toLeftOf="@+id/right_arrow"
+        android:src="@drawable/ic_check_circle_black_24dp"
+        android:tint="#888" />
 
 
     <ImageView
