--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -13,6 +13,8 @@
     <item name="colorPrimary">@color/primary</item>
     <item name="colorPrimaryDark">@color/primary_dark</item>
     <item name="colorAccent">@color/accent</item>
+    <item name="attr/color_text_primary">@color/black</item>
+    <item name="TextSizeBody">14sp</item>
 
   </style>
 </resources>
