--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="connect_layout">#ff95CCEE</color>
     <color name="room_item">#ffCFE3F0</color>
     <color name="drawer_icon_tint">#888888</color>
+    <color name="buttonColor">#00afce</color>
+    <color name="black">#000000</color>
 </resources>
