--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,8 +17,15 @@
     <item name="colorPrimary">@color/primary</item>
     <item name="colorPrimaryDark">@color/primary_dark</item>
     <item name="colorAccent">#00afce</item>
+    <item name="android:buttonStyle">@style/DefaultButton</item>
+    <item name="attr/color_text_primary">@color/black</item>
+    <item name="TextSizeBody">14sp</item>
   </style>
 
+  <style name="DefaultButton" parent="Widget.AppCompat.Button.Colored">
+    <item name="colorButtonNormal">@color/buttonColor</item>
+    <item name="android:textColor">@color/white</item>
+  </style>
   <!-- ToolBar -->
   <style name="ToolBarStyle" parent="Theme.AppCompat">
     <item name="android:textColorPrimary">@android:color/white</item>
@@ -62,7 +69,7 @@
     <item name="fab_showAnimation">@anim/jump_from_down</item>
     <item name="fab_hideAnimation">@anim/jump_to_down</item>
     <item name="fab_shadowColor">#00000000</item>
-    <item name="fab_colorNormal">#1565C0</item>
+    <item name="fab_colorNormal">#00afce</item>
     <item name="fab_colorPressed">#2272CD</item>
     <item name="fab_colorRipple">#62B2FF</item>
   </style>
