--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -56,7 +56,7 @@
                 android:maxLines="1"
                 android:gravity="center"
                 android:textColor="#00afce"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/disconnected"/>
 
@@ -71,8 +71,8 @@
                 app:SpinKit_Color="@color/white" />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:id="@+id/connected_image"
                 android:layout_below="@+id/connected_state"
                 android:layout_centerHorizontal="true"
