--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -45,6 +45,7 @@
             app:tabMode="fixed"
             app:tabGravity="fill"
             app:tabTextColor="@color/white70"
+            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
             app:tabSelectedTextColor="@color/white"/>
     </android.support.design.widget.AppBarLayout>
 
