--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -4,15 +4,14 @@
     android:id="@+id/activity_user"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="org.appspot.apprtc.UserActivity"
-    android:background="@color/white">
+    android:background="#302e2f">
 
     <include
         layout="@layout/spreedbox_header"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/videocall_layout"/>
+        android:layout_above="@+id/controls_layout"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,12 +19,12 @@
         android:id="@+id/user_header">
 
         <ImageView
-            android:layout_width="96dp"
-            android:layout_height="96dp"
             android:id="@+id/image_id"
-            android:layout_margin="10dp"
+            android:layout_width="@dimen/user_avatar_size"
+            android:layout_height="@dimen/user_avatar_size"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/user_icon_round"/>
+            android:layout_margin="10dp"
+            android:src="@drawable/user_icon_round" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -34,7 +33,7 @@
             android:text="User Name"
             android:layout_margin="10dp"
             android:layout_below="@+id/image_id"
-            android:textSize="20sp"
+            android:textSize="@dimen/user_name_size"
             android:textColor="@color/white"
             android:layout_centerHorizontal="true"
             android:id="@+id/text_id"/>
@@ -44,129 +43,177 @@
             android:layout_height="wrap_content"
             android:gravity="left|center_vertical"
             android:text="Message"
-            android:layout_margin="10dp"
+            android:layout_margin="@dimen/user_header_spacing"
             android:layout_below="@+id/text_id"
-            android:textSize="15sp"
+            android:textSize="14sp"
             android:textColor="@color/white"
             android:layout_centerHorizontal="true"
             android:id="@+id/message"/>
 
-</RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/videocall_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/user_header"
-        android:background="@color/white70"
-        android:clickable="true">
-        <ImageView
-            android:id="@+id/videocall_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:tint="#666666"
-            android:src="@drawable/ic_voice_chat_black_48dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="left|center_vertical"
-            android:text="@string/video_call"
-            android:layout_margin="5dp"
-            android:layout_toRightOf="@+id/videocall_button"
-            android:layout_alignTop="@+id/videocall_button"
-            android:layout_alignBottom="@+id/videocall_button"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:id="@+id/videocall_text"/>
-
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/call_layout"
-        android:layout_width="match_parent"
+        android:id="@+id/controls_layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/videocall_layout"
-        android:background="@color/white70"
-        android:clickable="true">
-        <ImageView
-            android:id="@+id/call_button"
+        android:padding="5dp"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/user_header">
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:tint="#666666"
-            android:src="@drawable/ic_call_black_48dp"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="1"
+            android:gravity="center_vertical">
+            <RelativeLayout
+                android:id="@+id/videocall_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.25"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:clickable="true">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_chat_bubble_white_48dp"/>
+                <ImageView
+                    android:id="@+id/videocall_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:tint="#00afce"
+                    android:background="@drawable/ring"
+                    android:src="@drawable/ic_voice_chat_black_48dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="left|center_vertical"
-            android:text="@string/voice_call"
-            android:layout_margin="5dp"
-            android:layout_toRightOf="@+id/call_button"
-            android:layout_alignTop="@+id/call_button"
-            android:layout_alignBottom="@+id/call_button"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:id="@+id/voicecall_text"/>
-    </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left|center_vertical"
+                    android:text="@string/video_call"
+                    android:padding="5dp"
+                    android:layout_toRightOf="@+id/videocall_button"
+                    android:layout_alignTop="@+id/videocall_button"
+                    android:layout_alignBottom="@+id/videocall_button"
+                    android:textSize="20sp"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/videocall_text"/>
 
-    <RelativeLayout
-        android:id="@+id/chat_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/call_layout"
-        android:background="@color/white70"
-        android:clickable="true">
-        <ImageView
-            android:id="@+id/chat_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:tint="#666666"
-            android:src="@drawable/ic_textsms_black_48dp"/>
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="left|center_vertical"
-            android:text="@string/send_message"
-            android:layout_margin="5dp"
-            android:layout_toRightOf="@+id/chat_button"
-            android:layout_alignTop="@+id/chat_button"
-            android:layout_alignBottom="@+id/chat_button"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:id="@+id/chat_text"/>
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/call_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.25"
+                android:layout_below="@+id/videocall_layout"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:clickable="true">
+                <ImageView
+                    android:id="@+id/call_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:tint="#00afce"
+                    android:background="@drawable/ring"
+                    android:src="@drawable/ic_call_black_48dp"/>
 
-    <RelativeLayout
-        android:id="@+id/file_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/chat_layout"
-        android:background="@color/white70"
-        android:clickable="true">
-        <ImageView
-            android:id="@+id/file_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:tint="#666666"
-            android:src="@drawable/ic_library_books_black_48dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left|center_vertical"
+                    android:text="@string/voice_call"
+                    android:padding="5dp"
+                    android:layout_toRightOf="@+id/call_button"
+                    android:layout_alignTop="@+id/call_button"
+                    android:layout_alignBottom="@+id/call_button"
+                    android:textSize="20sp"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/voicecall_text"/>
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="left|center_vertical"
-            android:text="@string/share_a_file"
-            android:layout_margin="5dp"
-            android:layout_toRightOf="@+id/file_button"
-            android:layout_alignTop="@+id/file_button"
-            android:layout_alignBottom="@+id/file_button"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:id="@+id/file_text"/>
+            <RelativeLayout
+                android:id="@+id/chat_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.25"
+                android:layout_below="@+id/call_layout"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:clickable="true">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_chat_bubble_white_48dp"/>
+                <ImageView
+                    android:id="@+id/chat_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:tint="#00afce"
+                    android:background="@drawable/ring"
+                    android:src="@drawable/ic_textsms_black_48dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left|center_vertical"
+                    android:text="@string/send_message"
+                    android:padding="5dp"
+                    android:layout_toRightOf="@+id/chat_button"
+                    android:layout_alignTop="@+id/chat_button"
+                    android:layout_alignBottom="@+id/chat_button"
+                    android:textSize="20sp"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/chat_text"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/file_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.25"
+                android:layout_below="@+id/chat_layout"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:clickable="true">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:tint="#ffffff"
+                    android:tintMode="src_in"
+                    android:src="@drawable/ic_library_books_black_48dp"/>
+
+                <ImageView
+                    android:id="@+id/file_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:tint="#00afce"
+                    android:background="@drawable/ring"
+                    android:src="@drawable/ic_library_books_black_48dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left|center_vertical"
+                    android:text="@string/share_a_file"
+                    android:padding="5dp"
+                    android:layout_toRightOf="@+id/file_button"
+                    android:layout_alignTop="@+id/file_button"
+                    android:layout_alignBottom="@+id/file_button"
+                    android:textSize="20sp"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/file_text"/>
+            </RelativeLayout>
+        </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
