--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -46,6 +46,17 @@
             android:layout_marginLeft="10dp"/>
 
         <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/button_call_toggle_speakerphone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_speaker_phone_white_48dp"
+            style="@style/CallActionButtonStyle"
+            android:layout_alignParentLeft="true"
+            android:layout_above="@+id/button_call_switch_camera"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="10dp"/>
+
+        <com.github.clans.fab.FloatingActionButton
             android:id="@+id/button_call_toggle_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -70,6 +81,7 @@
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_btn_speak_now"
             style="@style/CallActionButtonStyle"
+            android:tint="@color/white"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true" />
 
