--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_chat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey50"
+    android:background="#ffeeeeee"
     tools:context="org.appspot.apprtc.RoomActivity">
 
 
