--- a/app/src/main/res/layout/fragment_roomlist.xml
+++ b/app/src/main/res/layout/fragment_roomlist.xml
@@ -53,8 +53,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/room_controls_layout"
+        android:layout_centerVertical="true"
         android:text="@string/emptyRoom"
         android:gravity="center"
+        android:layout_above="@+id/share_room"
         android:textSize="20sp"/>
 
+    <ImageView
+        android:id="@+id/share_room"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp"
+        android:src="@drawable/ic_person_add_black_48dp"
+        android:tint="#888"/>
 </RelativeLayout>
