--- a/app/src/main/res/layout/outgoing_chat_row.xml
+++ b/app/src/main/res/layout/outgoing_chat_row.xml
@@ -1,111 +1,116 @@
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_margin="5dp">
 
-    <ImageView
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:id="@+id/image_id"
-        android:layout_margin="5dp"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/user_icon"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/outgoing_bubble"
-        android:layout_toLeftOf="@+id/image_id">
+        android:layout_alignParentRight="true">
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/message_content_layout"
-            android:paddingRight="20dp">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_alignParentRight="true"
-                android:text="Message"
-                android:layout_margin="5dp"
-                android:id="@+id/msgtext"/>
+            android:background="@drawable/message_bubble_sent"
+            android:layout_toLeftOf="@+id/image_id">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:id="@+id/fileLayout">
+                android:id="@+id/message_content_layout">
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/downloadButton"
-                    android:layout_alignParentRight="true"
-                    android:textColor="@color/black"
-                    android:text="@string/download"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Name"
-                    android:layout_below="@+id/downloadButton"
-                    android:id="@+id/name"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Size"
-                    android:layout_margin="5dp"
-                    android:layout_below="@+id/name"
-                    android:id="@+id/size"/>
+                    android:gravity="right"
+                    android:text="Message"
+                    android:padding="5dp"
+                    android:id="@+id/msgtext"/>
 
                 <RelativeLayout
-                    android:id="@+id/downloadLayout"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/name"
+                    android:layout_margin="5dp"
+                    android:layout_alignParentRight="true"
+                    android:id="@+id/fileLayout"
                     android:visibility="gone">
 
-                    <ProgressBar
-                        android:layout_width="match_parent"
+                    <Button
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@android:style/Widget.ProgressBar.Horizontal"
-                        android:progressDrawable="@drawable/progress_drawable"
-                        android:id="@+id/downloadProgress"/>
+                        android:id="@+id/downloadButton"
+                        android:layout_alignParentRight="true"
+                        android:textColor="@color/black"
+                        android:text="@string/download"/>
 
                     <TextView
-                        android:id="@+id/downloadProgressText"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="#00000000"
                         android:gravity="center"
-                        android:layout_alignLeft="@+id/downloadProgress"
-                        android:layout_alignTop="@+id/downloadProgress"
-                        android:layout_alignRight="@+id/downloadProgress"
-                        android:layout_alignBottom="@+id/downloadProgress"
-                        android:text="0 KB / 0%"/>
+                        android:text="Name"
+                        android:layout_below="@+id/downloadButton"
+                        android:id="@+id/name"/>
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Size"
+                        android:layout_margin="5dp"
+                        android:layout_below="@+id/name"
+                        android:id="@+id/size"/>
+
+                    <RelativeLayout
+                        android:id="@+id/downloadLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/name"
+                        android:visibility="gone">
+
+                        <ProgressBar
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@android:style/Widget.ProgressBar.Horizontal"
+                            android:progressDrawable="@drawable/progress_drawable"
+                            android:id="@+id/downloadProgress"/>
+
+                        <TextView
+                            android:id="@+id/downloadProgressText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="#00000000"
+                            android:gravity="center"
+                            android:layout_alignLeft="@+id/downloadProgress"
+                            android:layout_alignTop="@+id/downloadProgress"
+                            android:layout_alignRight="@+id/downloadProgress"
+                            android:layout_alignBottom="@+id/downloadProgress"
+                            android:text="0 KB / 0%"/>
+
+                    </RelativeLayout>
                 </RelativeLayout>
             </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="message time"
+                android:layout_margin="2dp"
+                android:layout_below="@+id/message_content_layout"
+                android:id="@+id/msgtime"/>
+
         </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_alignParentRight="true"
-            android:paddingRight="20dp"
-            android:text="message time"
-            android:layout_margin="2dp"
-            android:layout_below="@+id/message_content_layout"
-            android:id="@+id/msgtime"/>
-
-    </RelativeLayout>
-
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:id="@+id/image_id"
+            android:padding="5dp"
+            android:src="@drawable/user_icon"
+            app:riv_corner_radius="2dp"/>
+    </LinearLayout>
 </RelativeLayout>
