--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -1,18 +1,20 @@
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:background="#FFFFFF"
     android:layout_marginBottom="2dp">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:id="@+id/image_id"
         android:layout_margin="5dp"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:src="@drawable/user_icon"/>
+        android:src="@drawable/user_icon"
+        app:riv_corner_radius="2dp"/>
 
     <TextView
         android:layout_width="wrap_content"
