--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="drawer_width">240dp</dimen>
     <dimen name="room_drawer_header_height">140dp</dimen>
+    <dimen name="user_avatar_size">64dp</dimen>
+    <dimen name="user_header_spacing">5dp</dimen>
+    <dimen name="user_name_size">20sp</dimen>
 
 </resources>
