--- a/app/src/main/res/values/setup.xml
+++ b/app/src/main/res/values/setup.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="account_type">spreedbox</string>	<!-- better if was a domain name; but changing it now would require migrate accounts when the app is updated -->
+    <string name="share_with_activity">eu.siacs.conversations.ui.ShareWithActivity</string>
 </resources>
