--- a/app/src/main/res/values-large-xhdpi/dimens.xml
+++ b/app/src/main/res/values-large-xhdpi/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="user_avatar_size">96dp</dimen>
     <dimen name="user_header_spacing">15dp</dimen>
     <dimen name="user_name_size">20sp</dimen>
+    <dimen name="initiate_call_button_size">100dp</dimen>
 </resources>
