--- a/app/src/main/res/layout/calllist_row.xml
+++ b/app/src/main/res/layout/calllist_row.xml
@@ -3,7 +3,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:background="#FFFFFF"
+    android:background="@drawable/calllist_background"
     android:layout_marginBottom="2dp">
 
     <com.makeramen.roundedimageview.RoundedImageView
@@ -22,6 +22,8 @@
         android:layout_height="wrap_content"
         android:gravity="left|center_vertical"
         android:text="User Name"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:layout_margin="5dp"
         android:layout_toRightOf="@+id/image_id"
         android:layout_centerVertical="true"
@@ -34,6 +36,8 @@
         android:layout_height="wrap_content"
         android:gravity="left|bottom"
         android:text="status"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/image_id"
         android:layout_alignBottom="@+id/image_id"
@@ -41,14 +45,25 @@
         android:textSize="12sp"
         android:id="@+id/message"/>
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/connecting_progress"
+        style="@style/SpinKitView.Large.ThreeBounce"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center"
+        app:SpinKit_Color="#757575" />
+
     <ImageView
-        android:id="@+id/right_arrow"
+        android:id="@+id/action_image"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentRight="true"
-        android:layout_margin="5dp"
-        android:tint="@color/room_item"
+        android:layout_marginRight="10dp"
+        android:tint="#757575"
         android:layout_centerVertical="true"
-        android:src="@drawable/right_arrow"/>
+        android:src="@drawable/ic_add_white_24dp"/>
 
 </RelativeLayout>
