--- a/app/src/main/res/layout/file_row.xml
+++ b/app/src/main/res/layout/file_row.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="#dddddd"
+    android:background="#FFFFFF"
     android:layout_marginBottom="10dp">
 
     <ImageView
@@ -12,6 +12,7 @@
         android:layout_margin="5dp"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
+        android:tint="#757575"
         android:src="@drawable/files"/>
 
     <TextView
@@ -22,7 +23,7 @@
         android:layout_margin="5dp"
         android:layout_toRightOf="@+id/image_id"
         android:layout_centerVertical="true"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:id="@+id/text_id"/>
 
 </RelativeLayout>
