--- a/app/src/main/res/layout/fragment_initiate_call.xml
+++ b/app/src/main/res/layout/fragment_initiate_call.xml
@@ -7,12 +7,21 @@
     android:background="#00000000">
 
     <ImageView
+        android:id="@+id/audioCallBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="center"
+        android:tint="#dd302e2f"
+        android:src="@drawable/ic_phone_in_talk_grey_nodp"
+        android:background="#302e2f"/>
+
+    <ImageView
         android:id="@+id/contact_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_margin="10dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/user_icon"/>
+        android:src="@drawable/ic_person_white_nodp"/>
     <TextView
         android:id="@+id/contact_name_call"
         android:layout_width="wrap_content"
@@ -27,6 +36,16 @@
         android:shadowDx="2"
         android:shadowDy="2"
         android:text="Incoming call..."/>
+
+    <com.github.ybq.android.spinkit.SpinKitView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/connecting_progress"
+        style="@style/SpinKitView.Large.ThreeBounce"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/contact_name_call"
+        android:layout_gravity="center"
+        app:SpinKit_Color="@color/white" />
 
     <LinearLayout
         android:id="@+id/buttons_call_container"
@@ -46,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusableInTouchMode="false"
-            android:focusable="true"
+            android:focusable="false"
             android:clickable="true"
             android:textColor="@android:color/white"/>
 
@@ -57,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusableInTouchMode="false"
-            android:focusable="true"
+            android:focusable="false"
             android:clickable="true"
             android:textColor="@android:color/white"/>
 
