--- a/app/src/main/res/layout/fragment_roomlist.xml
+++ b/app/src/main/res/layout/fragment_roomlist.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rooms_button"
+            android:textAllCaps="false"
             android:gravity="left|center_vertical"
             android:drawableLeft="@drawable/ic_arrow_back_white_24dp"
             style="@style/Widget.AppCompat.Button.Colored"
@@ -32,10 +33,14 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:textSize="16sp"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:paddingLeft="15dp"
+            android:layout_toRightOf="@+id/roomsButton"
             android:layout_alignTop="@+id/roomsButton"
             android:layout_alignBottom="@+id/roomsButton"
             android:textColor="@color/white"
-            android:text="Room Name"/>
+            android:text="Room "/>
 
     </RelativeLayout>
 
@@ -48,24 +53,29 @@
         android:background="#ECEFF1"
         android:layout_below="@+id/room_controls_layout"/>
 
-    <TextView
-        android:id="@+id/emptyRoom"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:layout_below="@+id/room_controls_layout"
-        android:layout_centerVertical="true"
-        android:text="@string/emptyRoom"
-        android:gravity="center"
-        android:layout_above="@+id/share_room"
-        android:textSize="20sp"/>
+        android:gravity="center">
+        <TextView
+            android:id="@+id/emptyRoom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/room_controls_layout"
+            android:layout_centerVertical="true"
+            android:text="@string/emptyRoom"
+            android:gravity="center"
+            android:layout_above="@+id/share_room"
+            android:textSize="20sp"/>
 
-    <ImageView
-        android:id="@+id/share_room"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
-        android:src="@drawable/ic_person_add_black_48dp"
-        android:tint="#888"/>
+        <ImageView
+            android:id="@+id/share_room"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/ic_person_add_black_48dp"
+            android:tint="#888"/>
+    </LinearLayout>
 </RelativeLayout>
