--- a/app/src/main/res/layout/incoming_chat_row.xml
+++ b/app/src/main/res/layout/incoming_chat_row.xml
@@ -6,13 +6,13 @@
     android:layout_margin="5dp">
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:id="@+id/image_id"
-        android:layout_margin="5dp"
         android:layout_alignParentLeft="true"
-        android:src="@drawable/user_icon"
-        app:riv_corner_radius="2dp"/>
+        android:src="@drawable/ic_person_white_48dp"
+        android:tint="#888"
+        app:riv_corner_radius="3dp"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -32,6 +32,7 @@
                 android:text="Message"
                 android:textColor="@color/white"
                 android:padding="5dp"
+                android:textSize="16sp"
                 android:id="@+id/msgtext"/>
 
             <RelativeLayout
@@ -95,16 +96,34 @@
             </RelativeLayout>
         </RelativeLayout>
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:text="message time"
-            android:textColor="@color/white"
-            android:padding="2dp"
+            android:layout_gravity="left"
+            android:orientation="horizontal"
             android:layout_below="@+id/message_content_layout"
-            android:id="@+id/msgtime"/>
+            android:paddingBottom="2dp">
+            <ImageView
+                android:id="@+id/security_indicator"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="4sp"
+                android:alpha="0.70"
+                android:gravity="center_vertical"
+                android:src="@drawable/ic_lock_white_48dp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="message time"
+                android:textColor="@color/white"
+                android:padding="2dp"
+                android:textSize="12sp"
+                android:id="@+id/msgtime"/>
+
+        </LinearLayout>
     </RelativeLayout>
 
 </RelativeLayout>
