--- a/app/src/main/res/layout/rooms_list.xml
+++ b/app/src/main/res/layout/rooms_list.xml
@@ -8,6 +8,7 @@
         android:layout_height="48dp"
         android:id="@+id/image_id"
         android:layout_margin="5dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:tint="#888"
         android:src="@drawable/ic_supervisor_account_white_48dp"/>
@@ -15,44 +16,51 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Room Name"
+        android:gravity="left"
+        android:layout_centerVertical="true"
+        android:text="Room Name xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
         android:layout_margin="5dp"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:layout_toRightOf="@+id/image_id"
-        android:layout_toLeftOf="@+id/call_button"
-        android:layout_alignTop="@+id/image_id"
-        android:layout_alignBottom="@+id/image_id"
+        android:layout_toLeftOf="@+id/status_layout"
         android:id="@+id/text_id"/>
 
-    <TextView
-        android:id="@+id/message_status"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_toLeftOf="@+id/joined_status"
-        android:gravity="center"
-        android:layout_margin="5dp"
-        android:textColor="@color/black"
-        android:background="@drawable/recent_chats_message"/>
-
-    <ImageView
-        android:id="@+id/joined_status"
+    <RelativeLayout
+        android:id="@+id/status_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_margin="5dp"
-        android:layout_toLeftOf="@+id/right_arrow"
-        android:src="@drawable/ic_check_circle_black_24dp"
-        android:tint="#888" />
+        android:layout_alignParentRight="true">
+
+            <TextView
+            android:id="@+id/message_status"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:gravity="center"
+            android:layout_margin="5dp"
+            android:textColor="@color/black"
+            android:background="@drawable/recent_chats_message"/>
+
+        <ImageView
+            android:id="@+id/joined_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_margin="5dp"
+            android:layout_toRightOf="@+id/message_status"
+            android:src="@drawable/ic_check_circle_black_24dp"
+            android:tint="#888" />
 
 
-    <ImageView
-        android:id="@+id/right_arrow"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_alignParentRight="true"
-        android:layout_margin="5dp"
-        android:tint="#333"
-        android:layout_centerVertical="true"
-        android:src="@drawable/right_arrow"/>
-
+        <ImageView
+            android:id="@+id/right_arrow"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="5dp"
+            android:tint="#333"
+            android:layout_toRightOf="@+id/joined_status"
+            android:layout_centerVertical="true"
+            android:src="@drawable/right_arrow"/>
+    </RelativeLayout>
 </RelativeLayout>
