--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,5 @@
     <dimen name="user_avatar_size">64dp</dimen>
     <dimen name="user_header_spacing">5dp</dimen>
     <dimen name="user_name_size">20sp</dimen>
-
+    <dimen name="initiate_call_button_size">50dp</dimen>
 </resources>
