--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,9 @@
 <resources>
   <style name="CallActivityTheme" parent="Theme.AppCompat.Light.DarkActionBar">
     <item name="android:windowActionBar">false</item>
-    <item name="android:windowFullscreen">true</item>
-    <item name="android:windowNoTitle">true</item>
-    <item name="colorPrimary">@color/primary</item>
+    <item name="android:windowFullscreen">false</item>
+    <item name="android:windowNoTitle">false</item>
+    <item name="colorPrimary">#151010</item>
     <item name="colorPrimaryDark">@color/primary_dark</item>
     <item name="colorAccent">@color/accent</item>
   </style>
@@ -13,7 +13,7 @@
 
     <item name="android:windowNoTitle">true</item>
     <item name="android:windowActionBar">false</item>
-    <item name="android:windowFullscreen">true</item>
+    <item name="android:windowFullscreen">false</item>
     <item name="colorPrimary">@color/primary</item>
     <item name="colorPrimaryDark">@color/primary_dark</item>
     <item name="colorAccent">#00afce</item>
@@ -72,5 +72,11 @@
     <item name="fab_colorNormal">#00afce</item>
     <item name="fab_colorPressed">#2272CD</item>
     <item name="fab_colorRipple">#62B2FF</item>
+  </style>
+
+  <style name="NavigationView_ItemTextAppearance">
+
+    <item name="android:ellipsize">end</item>
+    <item name="android:listDivider">@android:color/transparent</item>
   </style>
 </resources>
