--- a/app/src/main/res/layout/outgoing_chat_row.xml
+++ b/app/src/main/res/layout/outgoing_chat_row.xml
@@ -15,7 +15,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/message_bubble_sent"
-            android:layout_toLeftOf="@+id/image_id">
+            android:layout_toLeftOf="@+id/image_id"
+            android:layout_alignBottom="@+id/image_id">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
