--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -7,10 +7,10 @@
     android:layout_marginBottom="2dp">
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:id="@+id/image_id"
-        android:layout_margin="5dp"
+        android:layout_margin="15dp"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:src="@drawable/ic_person_white_48dp"
@@ -36,8 +36,8 @@
         android:text="status"
         android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/image_id"
-        android:layout_alignBottom="@+id/image_id"
-        android:layout_marginBottom="2dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
         android:textSize="12sp"
         android:id="@+id/message"/>
 
